file name change to Eggs.JPG

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                         -->
                                                 <div class="container small gallery" >
                                                         <div class="row flush images" >
-                                                                <div class="6u" ><a href="images/Eggs.JPG" class="image full l" ><img src="images/thumbs/Eggs.jpg" title="<i>Hemidactylium</i> embryos" alt="" ></a></div>
+                                                                <div class="6u" ><a href="images/Eggs.jpg" class="image full l" ><img src="images/thumbs/Eggs.JPG" title="<i>Hemidactylium</i> embryos" alt="" ></a></div>
                                                                 <div class="6u" ><a href="images/Hemi.jpg" class="image full r" ><img src="images/thumbs/Hemi.jpg" title="<i>Hemidactylium scutatum</i> larvae" alt="" ></a></div>
                                                         </div>
                                                         <div class="row flush images" >
