added google analytics

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-50616786-1', 'harvard.edu');
+  ga('create', 'UA-50616786-2', 'auto');
   ga('send', 'pageview');
 
-        </script>
+	</script>
                 <noscript>
                         <link rel="stylesheet" href="css/skel-noscript.css" >
                         <link rel="stylesheet" href="css/style.css" >
@@ -165,7 +165,8 @@
                                                                 <div class="6u" ><a href="images/Hemi.jpg" class="image full r" ><img src="images/thumbs/Hemi.jpg" title="<i>Hemidactylium scutatum</i> larvae" alt="" ></a></div>
                                                         </div>
                                                         <div class="row flush images" >
-                                                                <div class="6u" ><a href="images/P1110336.jpg" class="image full l" ><img src="images/thumbs/P1110336.jpg" title="<i>Plethodon cinereus</i> mother and eggs" alt="" ></a></div>                                                         <div class="6u" ><a href="images/P1080332.jpg" class="image full r" ><img src="images/thumbs/P1080332.jpg" title="<i>Ambystoma maculatum</i>" alt="" ></a></div>
+                                                                <div class="6u" ><a href="images/P1110336.jpg" class="image full l" ><img src="images/thumbs/P1110336.jpg" title="<i>Plethodon cinereus</i> mother and eggs" alt="" ></a></div>                                                         
+                                                                <div class="6u" ><a href="images/P1080332.jpg" class="image full r" ><img src="images/thumbs/P1080332.jpg" title="<i>Ambystoma maculatum</i>" alt="" ></a></div>
                                                         </div>
                                                         <div class="row flush images" >
                                                                 <div class="6u" ><a href="images/DSC01541.jpg" class="image full l"><img src="images/thumbs/DSC01541.jpg" title="Glass frogs in amplexus" alt="" ></a></div>
@@ -254,7 +255,7 @@
                                                 Dept. of Ecology and Evolutionary Biology<br/>
                                           	 Brown University<br/>
                                        
-                                        <p><a href="mailto:zachary_lewis#@brown.edu" style="color: #CC0000">zachary_lewis@brown.edu</a></p>
+                                        <p><a href="mailto:zachary_lewis@brown.edu" style="color: #CC0000">zachary_lewis@brown.edu</a></p>
                                         </header>
                                         <div class="box container small" >
                                         
