--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
                 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
                 <meta name="description" content="" >
                 <meta name="keywords" content="" >
+                <!-- <link rel="stylesheet" href="css/main.css" /> added link to stylesheet />
                 <link rel="shortcut icon" href="favicon2.png" />
                 <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
                 <script src="js/jquery.min.js" ></script>
