--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-√<!DOCTYPE html>
+<!DOCTYPE html>
 <html><head>
                 <title>Zachary R. Lewis</title>
                 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
