--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 						<li><a href="http://dunnlab.org/"  style="color: #CC0000">Dunn Lab</a></li>
 						<li><a href="http://edwardslab.org/"  style="color: #CC0000">Edwards Lab</a></li>
 						<li><a href="https://www.brown.edu/academics/ecology-and-evolutionary-biology/"  style="color: #CC0000">Brown EEB</a></li>
-                                                <li><a href="http://www.oeb.harvard.edu/faculty/hanken/public_html/" style="color: #CC0000">Hanken Lab</a></li>
+                                                <li><a href="https://hankenlab.oeb.harvard.edu/" style="color: #CC0000">Hanken Lab</a></li>
                                                 <li><a href="http://www.oeb.harvard.edu/" style="color: #CC0000">Organismic and Evolutionary Biology</a></li>
                                                 <li><a href="http://www.mcz.harvard.edu/index.html" style="color: #CC0000">Museum of Comparative Zoology</a></li>
 
