--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		<p><font color="blue"; font size="3em"> Positions </font></p>
 		
 		<p>Yale University, Postdoctoral Associate. Advisor: Casey Dunn. 2017 -</p> 
-		<p>Brown University, Postdoctoral Associate. Advisors: Casey Dunn and Erika Edwards. 2016 - 2017 -</p> 
+		<p>Brown University, Postdoctoral Associate. Advisors: Casey Dunn and Erika Edwards. 2016 - 2017 </p> 
 		<p>Harvard University, Postdoctoral Associate. Advisor: James Hanken. 2016</p>
 		
         <p><font color="blue"; font size="3em"> Education </font></p>
