--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                                 
                                                 <p>Zack Lewis<br/>
                                                 Dept. of Ecology and Evolutionary Biology<br/>
-                                          	 	Brown University<br/>
+                                          	 	Yale University<br/>
                                        
                                         <p><a href="mailto:zachary.lewis@yale.edu" style="color: #CC0000">zachary.lewis@yale.edu</a></p>
                                         </header>
