--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                                 <h2>Zachary R. Lewis</h2>
                                         </header>
                                         <div align="left">
-                                        <p>I'm a postdoctoral associate in the Dunn Lab at Yale University. 
+                                        <p>I'm a postdoctoral associate in the <a href="http://dunnlab.org/"  style="color: #FFFFFF">Dunn Lab</a> at Yale University. 
                                         My research concerns the evolution of development. I study comparative genomics and how organogenesis is evolutionarily and ecologically patterned.<br></p>
                                         </div>
                                 
