added caption to gif

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                         <font size="2">
                                         <div class="container small gallery">
 												<div class="container small gallery" style="display: inline">
-  												<p><a href="volren_trim3.gif" ><img src="volren_trim3.gif" alt="" title="" width="50%"/></a></p>
+  												<p><a href="volren_trim3.gif" ><img src="volren_trim3.gif" alt="Viburnum leaf bud github.com/zrlewis/imaging" title="" width="50%"/></a></p>
   												<p>I devised a cheap method to create 3D tomographic datasets using common laboratory equipment.<li><a style="color: #CC0000" href="https://github.com/zrlewis/imaging" > See: github.com/zrlewis/imaging</a> </li></p>
   												</div>
                                                 <a href="https://youtu.be/3RLjlNbAWzM" data-poptrox="youtube,800x480"><img src="images/thumbs/Am57Frame.jpg" alt="" title="An <i>Ambystoma mexicanum</i> larvae. Contrast-enhanced micro-CT." /></a></div>
