fixed gif freeze

--- a/index.html
+++ b/index.html
@@ -201,15 +201,14 @@
                         <section id="videos" class="main style2 left dark fullscreen" >
                         <div class="content box style2" >
                                         <header>
-                                                <h2>Videos</h2>
+                                    <h2>Videos</h2>
                                         </header>
                                         <ul>
                                         <font size="2">
                                         <div class="container small gallery">
-												<div class="container small gallery" style="display: inline">
-  												<p><a href="volren_trim3.gif" ><img src="volren_trim3.gif" alt="Viburnum leaf bud github.com/zrlewis/imaging" title="" width="50%"/></a></p>
-  												<p>I devised a cheap method to create 3D tomographic datasets using common laboratory equipment.<li><a style="color: #CC0000" href="https://github.com/zrlewis/imaging" > See: github.com/zrlewis/imaging</a> </li></p>
-  												</div>
+												<div class="container small gallery" >
+  												<p><a href="https://youtu.be/Sc_PcjsgytI" data-poptrox="youtube,800x480"><img src="volren_trim3.gif" alt="" title="Viburnum leaf bud with episcopic microscopy github.com/zrlewis/imaging" width="50%"/></a></p></div>
+  												<p>I devised a cheap method to create 3D tomographic datasets using common </br> laboratory equipment. See: github.com/zrlewis/imaging </p>
                                                 <a href="https://youtu.be/3RLjlNbAWzM" data-poptrox="youtube,800x480"><img src="images/thumbs/Am57Frame.jpg" alt="" title="An <i>Ambystoma mexicanum</i> larvae. Contrast-enhanced micro-CT." /></a></div>
                                                 <p>Contrast-enhanced micro-computed tomography.</p>
                                                 <div class="container small gallery">
