--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 												<div class="container small gallery" >
   												<p><a href="https://youtu.be/Sc_PcjsgytI" data-poptrox="youtube,800x480"><img src="volren_trim3.gif" alt="" title="Viburnum leaf bud with episcopic microscopy github.com/zrlewis/imaging" width="50%"/></a></p></div>
   												<p>I devised a cheap method to create 3D tomographic datasets using common </br> laboratory equipment. See: github.com/zrlewis/imaging </p>
+                                                <div class="container small gallery">
                                                 <a href="https://youtu.be/3RLjlNbAWzM" data-poptrox="youtube,800x480"><img src="images/thumbs/Am57Frame.jpg" alt="" title="An <i>Ambystoma mexicanum</i> larvae. Contrast-enhanced micro-CT." /></a></div>
                                                 <p>Contrast-enhanced micro-computed tomography.</p>
                                                 <div class="container small gallery">
