fixed text wrap in video section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,16 @@
                                                         <li><a href="#links" >Links</a></li>
                                                         <li><a href="#contact" >Contact</a></li>
                                                 </ul>
-                                        </nav>
 
+                                      </nav>
+<!-- style for paragraphs in video section -->  
+<style>
+				p.ex {
+    				
+    				width: 50%;
+					}
+
+</style>
                         </header>
                         
                 <!-- Intro -->
@@ -207,26 +215,26 @@
                                         <font size="2">
                                         <div class="container small gallery">
 												<div class="container small gallery" >
-  												<p><a href="https://youtu.be/Sc_PcjsgytI" data-poptrox="youtube,800x480"><img src="volren_trim3.gif" alt="" title="Viburnum leaf bud with episcopic microscopy github.com/zrlewis/imaging" width="50%"/></a></p></div>
-  												<p>I devised a cheap method to create 3D tomographic datasets using common </br> laboratory equipment. See: github.com/zrlewis/imaging </p>
+  												<a href="https://youtu.be/Sc_PcjsgytI" data-poptrox="youtube,800x480"><img src="volren_trim3.gif" alt="" title="Viburnum leaf bud with episcopic microscopy github.com/zrlewis/imaging" width="50%"/></a></div>
+  												<p class="ex">I devised a cheap method to create 3D tomographic datasets using common </br> laboratory equipment. See: github.com/zrlewis/imaging </p>
                                                 <div class="container small gallery">
                                                 <a href="https://youtu.be/3RLjlNbAWzM" data-poptrox="youtube,800x480"><img src="images/thumbs/Am57Frame.jpg" alt="" title="An <i>Ambystoma mexicanum</i> larvae. Contrast-enhanced micro-CT." /></a></div>
-                                                <p>Contrast-enhanced micro-computed tomography.</p>
+                                                <p class="ex">Contrast-enhanced micro-computed tomography.</p>
                                                 <div class="container small gallery">
                                                 <a href="https://youtu.be/UIb4kWpvqvw" data-poptrox="youtube,800x480"><img src="images/thumbs/PcinFrame.jpg" alt="" title="A <i>Plethodon cinereus</i> embryo is eager to hatch after 73 days inside its chorion." /></a></div>
-                                                <p>A <i>Plethodon cinereus</i> embryo is eager to hatch after 73 days inside its chorion.</p>
+                                                <p class="ex">A <i>Plethodon cinereus</i> embryo is eager to hatch after 73 days inside its chorion.</p>
                                                 <div class="container small gallery">
                                                 <a href="https://youtu.be/jvWs-m1Oe9c" data-poptrox="youtube,480x480"><img src="images/thumbs/hemiframe.jpg" alt="" title="Timelapse of first cell divisions in Hemidactylium." /></a></div>
-                                                <p>Timelapse of the first cell divisions in Hemidactylium.</p>
+                                                <p class="ex">Timelapse of the first cell divisions in Hemidactylium.</p>
                                                 <div class="container small gallery">
                                                 <a href="https://youtu.be/ujKrUF7Hnn8" data-poptrox="youtube,480x480"><img src="images/thumbs/AxolotlFrame.jpg" alt="" title="Timelapse of first cell divisions in Axolotl." /></a></div>
-                                                <p>Timelapse of the first cell divisions in Axolotl.</p>
+                                                <p class="ex">Timelapse of the first cell divisions in Axolotl.</p>
                                                 <div class="container small gallery">
                                                 <a href="https://youtu.be/UKfX0VwusTs" data-poptrox="youtube,800x480"><img src="images/thumbs/NeurulationFrame.jpg" alt="" title="A <i>Hemidactylium scutatum</i> embryo neurulates and begins to form somites and the head." /></a></div>
-                                                <p>A <i>Hemidactylium scutatum</i> embryo neurulates and begins to form somites and the head.</p>
-                                                <div class="container small gallery">
+                                                <p class="ex">A <i>Hemidactylium scutatum</i> embryo neurulates and begins to form somites and the head.</p>
+                                                <div class="container small gallery" >
                                                 <a href="https://youtu.be/jRDnVy7HsCw" data-poptrox="youtube,800x480"><img src="images/thumbs/r6Frame.jpg" alt="" title="Kaede photoconversion marks cranial neural crest cells as they migrate into ganglia in a zebrafish. Movie made in collaboration with Alex Nechiporuk." /></a></div>
-                                                <p>Kaede photoconversion marks cranial neural crest cells as they migrate into ganglia in a zebrafish. Movie made in collaboration with Alex Nechiporuk.</p>
+                                                <p class="ex"> Kaede photoconversion marks cranial neural crest cells as they migrate into ganglia in a zebrafish. Movie made in collaboration with Alex Nechiporuk.</p>
                                                 </font>
                                                 </div>
 
