tried link to imaging github page

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                         
 												<div class="container small gallery" >
   												<a href="https://youtu.be/Sc_PcjsgytI" data-poptrox="youtube,800x480"><img src="volren_trim3.gif" alt="" title="Viburnum leaf bud with episcopic microscopy github.com/zrlewis/imaging" width="50%"/></a></div>
-  												<p class="ex">I devised a cheap method to create 3D tomographic datasets using common </br> laboratory equipment. See: github.com/zrlewis/imaging </p>
+  												<p class="ex">I devised a cheap method to create 3D tomographic datasets using common </br> laboratory equipment. </b> See: <a href="http://github.com/zrlewis/imaging"  style="color: #5233FF">github.com/zrlewis/imaging</a> </p>
                                                 <div class="container small gallery">
                                                 <a href="https://youtu.be/3RLjlNbAWzM" data-poptrox="youtube,800x480"><img src="images/thumbs/Am57Frame.jpg" alt="" title="An <i>Ambystoma mexicanum</i> larvae. Contrast-enhanced micro-CT." /></a></div>
                                                 <p class="ex">Contrast-enhanced micro-computed tomography.</p>
