fixed SICB talk entry

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <p>NAS Reed College Summer Research Fellowship; 2006</p>
 
                                 <p> <font color="blue"; font size="3em">Selected Posters and Oral Presentations </font></p>
-    <p>Lewis ZR, Dunn CW. "UV tolerance in the Portuguese man of war (<i>Physalia physalis</i>).” Society for Integrative and Comparative Biology Annual Meeting, Austin, TX, Jan. 2020$
+    <p>Lewis ZR, Dunn CW. "UV tolerance in the Portuguese man of war (<i>Physalia physalis</i>).” Society for Integrative and Comparative Biology annual meeting, Austin, TX, Jan. 2020</p>
     <p>Lewis ZR, Munro C, Dunn CW. "The genome of the Portuguese man of war (<i>Physalia physalis</i>).” International Plants and Animal Genomes, San Diego, CA, Jan. 2019.</p>
     <p>Lewis ZR, Dorantes JA, Hanken J. "Neofunctionalization of a lung gene paralog may facilitate respiration in lungless salamanders.” Society for Integrative and Comparative Biology annual meeting, Portland, OR, Jan. 2016.</p>
     <p>Lewis ZR, Hanken J. “A transcriptional and morphological investigation of lung loss in salamanders.” Invited talk. Canadian Society of Zoologists annual meeting, Calgary, AB. May 2015.</p>
