updated profile pic

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <section id="intro" class="main style1 dark fullscreen" >
                                 <div class="content container small" >
                                         <header>
-                                        <div style="float: left; clear: right;"><img src="./images/thumbs/IMG_2714.jpg">
+                                        <div style="float: left; clear: right;"><img src="./images/thumbs/DSC07116.jpg" width="70%">
 
 										<img src="pixel.gif" width="10" height="1"></div>
                                         <!-- <img src="images/thumbs/IMG_2714.jpg" width="250" title="" alt="" style="vertical-align:left" hspace="10"></a>-->
