update contact info

--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
                                                 <h2>Contact</h2>
 
                                                 <p>Zack Lewis<br/>
-                                                Dept. of Ecology and Evolutionary Biology<br/>
-                                          	 	Yale University<br/>
+                                                Nanostring Technologies<br/>
+                                          	 	Seattle, WA<br/>
 
-                                        <p><a href="mailto:zachary.lewis@yale.edu" style="color: #CC0000">zachary.lewis@yale.edu</a></p>
+                                        <p><a href="mailto:zrlewis@gmail.com" style="color: #CC0000">zrlewis@gmail.com</a></p>
                                         </header>
                                         <div class="box container small" >
 
