--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                                                 <h2>Zachary R. Lewis</h2>
                                         </header>
                                         <div align="left">
-                                        <p>I'm a postdoctoral associate in the <a href="http://dunnlab.org/"  style="color: #FFFFFF">Dunn Lab</a> and a lecturer in Ecology and Evolutionary Biology at Yale University.
-                                        My research concerns the evolution of development. I study comparative genomics and how organogenesis is evolutionarily and ecologically patterned.<br></p>
+                                        <p>I'm a Scientist 2 at <a href="http://nanostring.com/"  style="color: #FFFFFF">Nanostring Technologies</a>.<br></p>
                                         </div>
 
                                         <footer>
