--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
                                         <font size="2em">
 <h7>
 		<p><font color="blue"; font size="3em"> Positions </font></p>
-	  <p>Yale University, Lecturer in Ecology and Evolutionary Biology. 2019 -</p>
-		<p>Yale University, Postdoctoral Associate. Advisor: Casey Dunn. 2017 -</p>
+                <p>NanoSting Technologies, Scientist 2. 2020 - </p>
+                <p>Yale University, Lecturer in Ecology and Evolutionary Biology. 2019 - 2020</p>
+		<p>Yale University, Postdoctoral Associate. Advisor: Casey Dunn. 2017 - 2020</p>
 		<p>Brown University, Postdoctoral Associate. Advisors: Casey Dunn and Erika Edwards. 2016 - 2017 </p>
 		<p>Harvard University, Postdoctoral Associate. Advisor: James Hanken. 2016</p>
 
