added paragraph break

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                         <font size="3">
                                         <p>I am fascinated by morphology and evolution. In particular, my work has focused on the genomic and developmental mechanisms by which morphology and physiology evolve. &nbsp;</p>
                                         <font color="blue" > Spatial biology.</font>
-                                        Developing new spatial -omic technologies for high-plex visualization of proteins and DNA loci. 
+                                        Developing new spatial -omic technologies for high-plex visualization of proteins and DNA loci. <p></p>
                                         
                                          <font color="blue" > Comparative genomics.</font>
                                         Utilization of long read sequencing and genome scaffolding approaches to understand animal evolution and the evolution of genomes. <p></p>
