--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         </header>
                                         <div align="left">
 
-                                        <p>I'm a Scientist 2 at <a href="http://nanostring.com"  style="color: #FFFFFF">NanoString Technologies</a><br></p>
+                                        <p>I'm a Senior Scientist at <a href="http://nanostring.com"  style="color: #FFFFFF">NanoString Technologies</a><br></p>
 
                                         </div>
 
@@ -109,7 +109,8 @@
                                         <font size="2em">
 <h7>
 		<p><font color="blue"; font size="3em"> Positions </font></p>
-                <p>NanoString Technologies, Scientist 2. 2020 - </p>
+                <p>NanoString Technologies, Senior Scientist. 2022 - </p>
+		<p>NanoString Technologies, Scientist 2. 2020 - 2022</p>
                 <p>Yale University, Lecturer in Ecology and Evolutionary Biology. 2019 - 2020</p>
 		<p>Yale University, Postdoctoral Associate. Advisor: Casey Dunn. 2017 - 2020</p>
 		<p>Brown University, Postdoctoral Associate. Advisors: Casey Dunn and Erika Edwards. 2016 - 2017 </p>
