--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         </header>
                                         <div align="left">
 
-                                        <p>I'm a Senior Scientist at <a href="http://nanostring.com"  style="color: #FFFFFF">NanoString Technologies</a><br></p>
+                                        <p>Senior Scientist | Product Owner | Manager | Data analyst</a><br></p>
 
                                         </div>
 
@@ -109,7 +109,7 @@
                                         <font size="2em">
 <h7>
 		<p><font color="blue"; font size="3em"> Positions </font></p>
-                <p>NanoString Technologies, Senior Scientist. 2022 - </p>
+                <p>NanoString Technologies, Senior Scientist. 2022 - 2023</p>
 		<p>NanoString Technologies, Scientist 2. 2020 - 2022</p>
                 <p>Yale University, Lecturer in Ecology and Evolutionary Biology. 2019 - 2020</p>
 		<p>Yale University, Postdoctoral Associate. Advisor: Casey Dunn. 2017 - 2020</p>
@@ -120,7 +120,7 @@
         <p>Harvard University, PhD, 2009 - 2015</p>
         <p>Reed College, BA, 2002-2006</p>
         <p><font color="blue"; font size="3em"> Publications </font></p>
-				<p>Dezem F, et al. 2023. A machine learning one-class logistic regression model to predict stemness for single cell transcriptomics and spatial omics. BMC Genomics. 24, Article number: 717<a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-023-09722-6" style="color: #CC0000">https://doi.org/10.1186/s12864-023-09722-6</a></p> <a href="https://www.biorxiv.org/content/10.1101/2023.05.04.539461v1" style="color: #CC0000"> Preprint</a></p>
+				<p>Dezem F, et al. 2023. A machine learning one-class logistic regression model to predict stemness for single cell transcriptomics and spatial omics. BMC Genomics. 24:717. <a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-023-09722-6" style="color: #CC0000">https://doi.org/10.1186/s12864-023-09722-6</a> <a href="https://www.biorxiv.org/content/10.1101/2023.05.04.539461v1" style="color: #CC0000"> Preprint</a></p>
 				<p>He S, et al. 2022. High-plex imaging of RNA and proteins at subcellular resolution in fixed tissue by spatial molecular imaging. Nature Biotechnology. <a href="https://www.nature.com/articles/s41587-022-01483-z" style="color: #CC0000">https://doi.org/10.1038/s41587-022-01483-z</a>  <a href="https://www.biorxiv.org/content/10.1101/2021.11.03.467020v1" style="color: #CC0000">Preprint</a> </p>
 				<p>Lewis ZR, Kerney R, Hanken J. 2022. Developmental basis of evolutionary lung loss in plethodontid salamanders. Science Advances: 8, eabo6108. <a href="https://www.science.org/doi/10.1126/sciadv.abo6108" style="color: #CC0000">https://www.science.org/doi/10.1126/sciadv.abo6108</a>.</p>
 				<p>Gilman IS, Moreno-Villena JJ, Lewis ZR, Goolsby EW, Edwards EJ. 2022. Gene co-expression reveals the modularity and integration of C4 and CAM in <i>Portulaca</i>. Plant Physiology: kiac116. <a href="https://doi.org/10.1093/plphys/kiac116" style="color: #CC0000">https://doi.org/10.1093/plphys/kiac116</a><a href="https://www.biorxiv.org/content/10.1101/2021.07.07.451465v1" style="color: #CC0000">[preprint]</a></p>
