--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         </header>
                                         <div align="left">
 
-                                        <p>Senior Scientist | Product Owner | Manager | Data analyst</a><br></p>
+                                        <p>Scientist 3 | Product Owner | Manager | Data analyst</a><br></p>
 
                                         </div>
 
@@ -109,6 +109,7 @@
                                         <font size="2em">
 <h7>
 		<p><font color="blue"; font size="3em"> Positions </font></p>
+		<p>Allen Institute for Brain Science, Scientist 3. 2024 - present</p>
                 <p>NanoString Technologies, Senior Scientist. 2022 - 2023</p>
 		<p>NanoString Technologies, Scientist 2. 2020 - 2022</p>
                 <p>Yale University, Lecturer in Ecology and Evolutionary Biology. 2019 - 2020</p>
