update headshot, resume and contact

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                         <section id="intro" class="main style1 dark fullscreen" >
                                 <div class="content container small" >
                                         <header>
-                                        <div style="float: left; clear: right;"><img src="./images/thumbs/DSC07116.jpg" width="70%">
+                                        <div align="left" style="float: left; clear: right;"><img src="./images/AI_headshot.jpg" width="30%">
 
-										<img src="pixel.gif" width="10" height="1"></div>
+					<!--					<img src="pixel.gif" width="10" height="1"></div> -->
                                         <!-- <img src="images/thumbs/IMG_2714.jpg" width="250" title="" alt="" style="vertical-align:left" hspace="10"></a>-->
-                                                <div align="left">
-                                                <h2>Zachary R. Lewis</h2>
+                                        <div align="left">
+                                        <h2>Zachary R. Lewis</h2>
                                         </header>
                                         <div align="left">
-
+                                        
                                         <p>Scientist 3 | Product Owner | Manager | Data analyst</a><br></p>
 
                                         </div>
@@ -104,7 +104,7 @@
                                 <div class="content box style2" >
                                         <header>
                                                 <h2>CV</h2>
-                                                resume available <a href="Lewis_Resume_2023.pdf" style="color: #CC0000"> here </a>
+                                                resume available <a href="Lewis_Resume_2024.pdf" style="color: #CC0000"> here </a>
                                         </header>
                                         <font size="2em">
 <h7>
@@ -266,7 +266,8 @@
 						<li><a href="https://github.com/zrlewis" style="color: #CC0000" class="fa solo fa-github"> GitHub </a></li>
 						<li><a href="https://www.linkedin.com/pub/zachary-lewis/20/437/815" style="color: #CC0000" class="fa solo fa-linkedin"> LinkedIn</a></li>
 						<li><a href="https://twitter.com/z_r_lewis" style="color: #CC0000" class="fa solo fa-twitter" > Twitter</a></li>
-						<li><a href="http://dunnlab.org/"  style="color: #CC0000">Dunn Lab</a></li>
+						<li><a href="https://alleninstitute.org/person/zack-lewis/" style="color: #CC0000">Allen Institute Bio</a> </li>
+                                                <li><a href="http://dunnlab.org/"  style="color: #CC0000">Dunn Lab</a></li>
 						<li><a href="http://edwardslab.org/"  style="color: #CC0000">Edwards Lab</a></li>
                         <li><a href="https://hankenlab.oeb.harvard.edu/" style="color: #CC0000">Hanken Lab</a></li>
                         <li><a href="http://www.mcz.harvard.edu/index.html" style="color: #CC0000">Museum of Comparative Zoology</a></li>
@@ -293,7 +294,7 @@
                                                 <h2>Contact</h2>
 
                                                 <p>Zack Lewis<br/>
-                                                Nanostring Technologies<br/>
+                                                Allen Institute for Brain Science<br/>
                                           	 	Seattle, WA<br/>
 
                                         <p><a href="mailto:zrlewis@gmail.com" style="color: #CC0000">zrlewis@gmail.com</a></p>
