--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         </header>
                                         <div align="left">
                                         
-                                        <p>Scientist 3 | Product Owner | Manager | Data analyst</a><br></p>
+                                        <p>Senior Scientist | Product Owner | Manager | Data analyst</a><br></p>
 
                                         </div>
 
@@ -109,13 +109,14 @@
                                         <font size="2em">
 <h7>
 		<p><font color="blue"; font size="3em"> Positions </font></p>
-		<p>Allen Institute for Brain Science, Scientist 3. 2024 - present</p>
-                <p>NanoString Technologies, Senior Scientist. 2022 - 2023</p>
-		<p>NanoString Technologies, Scientist 2. 2020 - 2022</p>
-                <p>Yale University, Lecturer in Ecology and Evolutionary Biology. 2019 - 2020</p>
-		<p>Yale University, Postdoctoral Associate. Advisor: Casey Dunn. 2017 - 2020</p>
-		<p>Brown University, Postdoctoral Associate. Advisors: Casey Dunn and Erika Edwards. 2016 - 2017 </p>
-		<p>Harvard University, Postdoctoral Associate. Advisor: James Hanken. 2016</p>
+		<p>Allen Institute for Brain Science, Senior Scientist. Oct. 2024 - present</p>
+		<p>Allen Institute for Brain Science, Scientist 3. Jan. 2024 - Oct. 2024</p>
+                <p>NanoString Technologies, Senior Scientist. Dec. 2022 - Oct. 2023</p>
+		<p>NanoString Technologies, Scientist 2. Aug. 2020 - Nov. 2022</p>
+                <p>Yale University, Lecturer in Ecology and Evolutionary Biology. Aug. 2019 - Jul. 2020</p>
+		<p>Yale University, Postdoctoral Associate. Advisor: Casey Dunn. Jul. 2017 - Jul. 2020</p>
+		<p>Brown University, Postdoctoral Associate. Advisors: Casey Dunn and Erika Edwards. Jul. 2016 - Jun. 2017</p>
+		<p>Harvard University, Postdoctoral Associate. Advisor: James Hanken. Jan. 2016 - Jun. 2016</p>
 
         <p><font color="blue"; font size="3em"> Education </font></p>
         <p>Harvard University, PhD, 2009 - 2015</p>
